# Tic-Tac-Toe-Battles

./: README.md
backend/: main.py  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: CellType.tsx  GameInfo.tsx  JoinGameForm.tsx  PlayerType.tsx  TicTacToeBoard.tsx
