[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Tharindu <tharindubathigama@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
websockets = "^11.0.3"
starlette = "^0.27.0"
uvicorn = "^0.22.0"
pydantic = "^1.10.7"
python-socketio = "^5.8.0"
fastapi-socketio = "^0.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
